--- a/session20/css/style.css
+++ b/session20/css/style.css
@@ -3,3 +3,16 @@
     height: 40px;
     border: solid red
 }
+
+.circulo {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: solid red
+}
+
+.rectangulo {
+    width: 80px;
+    height: 40px;
+    border: solid red
+}
