--- a/session20/ejercicioJQuery/css/style.css
+++ b/session20/ejercicioJQuery/css/style.css
@@ -1,20 +1,21 @@
-.divUnSelect{
+.radioContent{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
-    border: solid red
+    color: yellow;
+    background-color: rgba(196, 196, 196, 0.884);
 }
 
-.divSelect{
+.radioSelected{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
-    border: solid red;
-    background-color: red;
-}
-
-.pUnSelect{
-    color: red;
-}
-
-.pSelect{
     color: white;
+    background-color: rgba(32, 32, 235, 0.623);
 }
